confs/home_assistant/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homeassistant-ingress-local
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1240m
spec:
  ingressClassName: nginx
  rules:
  - host: ha.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              number: 8123
